plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.handfair'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += "--enable-preview"
}

repositories {
	mavenCentral()
}


task copyAppJar(type:Copy){
	dependsOn bootJar
	from bootJar.archiveFile.get().asFile
	rename {String filename -> return "gateway.jar"}
	into "${rootProject.buildDir}/output-docker"
}

dependencies {
	compileOnly 'org.jetbrains:annotations:23.0.0'
//	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.google.code.gson:gson'
//	implementation 'com.bucket4j:bucket4j-core:8.7.0'
//	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
//	implementation 'io.github.bucket4j:bucket4j-caffeine:8.13.0'
	implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.5'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-core'
	implementation 'io.micrometer:micrometer-registry-prometheus'

}

// нах не нужен, все ломает
//dependencyManagement {
//	imports {
//		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR12"
//	}
//}

tasks.named('test') {
	useJUnitPlatform()
}
